# plan1

./: .gitignore  BIDIRECTIONAL_TRUST.md  CERT_EXCHANGE_TROUBLESHOOTING.md  Cargo.toml  FIX_INSTRUCTIONS.md  HEARTBEAT_FEATURE.md  HTTP_REDIRECT.md  HTTP_REDIRECT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOGGING_GUIDE.md  PEER_PORT_HEADER.md  QUICKSTART.md  README.md  STARTUP_RECONNECTION.md  TOFU_README.md  WARP.md  cert.pem  config.toml  dashboard.html  error_report.txt  key.pem  package-lock.json  test_path_extraction.rs
certs/: server_cert.pem  server_key.pem  trusted_peers.json  trusted_peers.json.backup
examples/: tofu_demo.rs
src/: broadcast.rs  cert_manager.rs  cert_verifier.rs  config.rs  heartbeat.rs  lib.rs  main.rs  peer_client.rs  peer_trust.rs
