[package]
name = "plan1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "plan1"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = "0.20.0"
tokio-rustls = "0.23"
async-stream = "0.3.0"
tokio-stream = "0.1"
rustls-pemfile = "0.3.0"  # Add this line to include rustls-pemfile

