[package]
name = "plan1"
version = "0.1.0"
edition = "2021"

[lib]
name = "plan1"
path = "src/lib.rs"

[[bin]]
name = "plan1"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.20.0", features = ["dangerous_configuration"] }
tokio-rustls = "0.23"
async-stream = "0.3.0"
tokio-stream = "0.1"
rustls-pemfile = "0.3.0"
rcgen = "0.10"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }

